samples/_failures_safe/1761487304_0faace_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96e4d433.c: In function ‘tokenize_input’:
./samples/SAFE/__tmp_96e4d433.c:157:9: error: expected declaration or statement at end of input
  157 |         if (token.type == TOKEN_EOF) break;
      |         ^~
./samples/SAFE/__tmp_96e4d433.c:157:9: error: expected declaration or statement at end of input
